# tc-python-flask-postgres-example

./: pyproject.toml
sql/: 001-initial-schema.sql
src/: app.py
test/: test_db.py
